[Bug][Home] David would not overflow before rebound in some cases
The predicted angle calculation was wrong, as initial angle was
calculated using acos, which only returned 1 of 2 possible value.
Using atan will return the true intial angle.

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -76,11 +76,15 @@
     /* For David debugging purposes, uncomment below */
     /* background-color: purple; */
     animation: rotate 120s linear infinite;
+    /* transform: rotate(315deg); */
     transform-origin: center;
   }
 }
 
 @keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
   100% {
     transform: rotate(360deg);
   }
